--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "engines": {
+    "node": "16.x"
+  }
 }
