Fixed scripts to allow access from local network

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "ng": "ng serve --proxy-config proxy.config.json",
-    "start": "ng serve",
+    "start": "node server.js",
+    "dev": "ng serve --host 0.0.0.0 --proxy-config proxy.config.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
