--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
     "express": "^4.17.2",
+    "http-proxy-middleware": "^2.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
