--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/status-bar": "1.0.2",
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.3",
     "rxjs": "~6.6.0",
