--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@angular/service-worker": "~12.1.1",
     "@capacitor/app": "1.0.2",
     "@capacitor/camera": "^1.0.4",
     "@capacitor/core": "3.2.0",
