--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
     "tabWidth": 2,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "trailingComma": "all",
+    "endOfLine": "auto"
 }
