--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
         "plugin:@angular-eslint/ng-cli-compat",
         "plugin:@angular-eslint/ng-cli-compat--formatting-add-on",
         "plugin:@angular-eslint/template/process-inline-templates",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:import/recommended",
+        "plugin:import/typescript"
       ],
       "rules": {
         "@angular-eslint/component-class-suffix": [
