--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@typescript-eslint/parser": "4.16.1",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "eslint-plugin-prettier": "^4.0.0",
