--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -3,7 +3,7 @@
   "index": "/index.html",
   "assetGroups": [
     {
-      "name": "app",
+      "name": "Anikultura",
       "installMode": "prefetch",
       "resources": {
         "files": [
