--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "anikultura",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "anikultura-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "author": "Radical Doubting",
+  "homepage": "https://github.com/Radical-Doubting/anikultura-frontend#readme",
+  "bugs": {
+    "url": "https://github.com/Radical-Doubting/anikultura-frontend/issues"
+  },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "npx ionic serve --external",
     "build": "npx ionic build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test": "npx ng test",
+    "lint": "npx ng lint",
+    "lint:fix": "npx ng lint --fix",
+    "e2e": "npx ng e2e",
+    "postinstall": "npx husky install"
   },
-  "private": true,
   "dependencies": {
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
@@ -20,6 +28,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@angular/service-worker": "~12.1.1",
     "@capacitor/app": "1.0.2",
     "@capacitor/camera": "^1.0.4",
     "@capacitor/core": "3.2.0",
@@ -54,9 +63,13 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
@@ -65,12 +78,9 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.5.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
-  },
-  "description": "An Ionic project",
-  "engines": {
-    "node": "16.x"
   }
 }
