--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@capacitor/status-bar": "1.0.2",
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.3",
